force-app/main/default/objects/ssot__LoyaltyMemberCurrency__dlm/fields/ssot__NextResetDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__NextResetDate__c</fullName>
    <label>Next Reset Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>NextResetDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>DateTime</type>
</CustomField>