force-app/main/default/objects/ssot__LoyaltyMemberCurrency__dlm/fields/ssot__PointsBalanceBeforeResetNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__PointsBalanceBeforeResetNumber__c</fullName>
    <label>Points Balance Before Reset</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PointsBalanceBeforeResetNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>