force-app/main/default/objects/ssot__LoyaltyMemberCurrency__dlm/fields/ssot__PointsBalanceNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__PointsBalanceNumber__c</fullName>
    <label>Points Balance</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PointsBalanceNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>