force-app/main/default/objects/ssot__LoyaltyMemberCurrency__dlm/fields/ssot__rel_1697761180188_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761180188_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LoyaltyMemberCurrency_CurrencyTypeId_rel</label>
    <referenceTo>ssot__LoyaltyProgramCurrency__dlm</referenceTo>
    <relationshipLabel>LoyaltyMemberCurrency_CurrencyTypeId_rel</relationshipLabel>
    <relationshipName>rel_1697761180188_end</relationshipName>
    <type>Lookup</type>
</CustomField>