force-app/main/default/objects/ssot__LoyaltyMemberCurrency__dlm/fields/ssot__rel_1697761180884_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761180884_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LoyaltyMemberTier_Id_map_LoyaltyMemb_rel</label>
    <referenceTo>ssot__LoyaltyMemberTier__dlm</referenceTo>
    <relationshipLabel>LoyaltyMemberTier_Id_map_LoyaltyMemb_rel</relationshipLabel>
    <relationshipName>rel_1697761180884_end</relationshipName>
    <type>Lookup</type>
</CustomField>