force-app/main/default/objects/ssot__LoyaltyMemberCurrency__dlm/fields/ssot__TotalPointsAccruedNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__TotalPointsAccruedNumber__c</fullName>
    <label>Total Points Accrued</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TotalPointsAccruedNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>