force-app/main/default/objects/ssot__LoyaltyMemberCurrency__dlm/fields/ssot__TotalPointsRedeemedNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__TotalPointsRedeemedNumber__c</fullName>
    <label>Total Points Redeemed</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TotalPointsRedeemedNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>